Version 1.1.0 -- DEVELOPMENT
----------------------------
- Much improved SMTP error handling (patch by Jeff Evans)
- Preferences are now cached instead of read in every page load.
- Improved URL parser
- Added ability to read HTML messages by default instead of plain text (Display Options)
- Added authenticated SMTP server support (configure in conf.pl)
- Rewrote attachment handling code in compose.php
- If aliases are typed in To, Cc, or Bcc, they are automatically looked up in
    in the addressbook and converted to the associated addresses.
- Added collapseable folder listing (an option that can be turned on in Folder Options)
- Added alternating row colors to improve interface (Display Options)

Version 1.0.6 -- April 19, 2001
-------------------------------
- Reworked validation for each page.  It's now standardized in validate.php
- Fixed login bug that resulted from 1.0.5 security updates
- Fixed plugin incompatibilities that were introduced in 1.0.5
- Added more security checking to preference saving/loading
- Updated German translation (thanks to Ronald Bauerschmidt <rb@debian.org>)
- Updated Finnish help files

Version 1.0.5 -- April 17, 2001 
-------------------------------
- MAJOR security issues addressed.  Please upgrade as soon as possible.
- Downloading attachments should work better due to a tip by Ray Black III.
- Fixed bug with drop-down folder list not containing INBOX
- Added Sweedish help files Teemu Junnila <teejun@vallcom.com>
- Added Italian help files Antonetti Roberto <antonr@piceniaweb.com>

Version 1.0.4 -- April 9, 2001 
------------------------------
- Fixed some bugs with folder creation
- Security fix for UW IMAP server to disallow folder paths outside of $folder_prefix
- Some problems with header encoding/decoding fixed
- Made subject column take up whatever width is available
- Added bcc to html addressbook search

Version 1.0.3 -- March 9, 2001 
------------------------------
- Many i18n enhancements/fixes